# papertowel

./: .gitignore  .gitleaks.toml  .papertowel.toml.example  .papertowelignore  .prettierignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  build.rs  deny.toml
.githooks/: pre-commit  pre-push
.github/: CODEOWNERS
.github/workflows/: auto-tag.yml  ci.yml  docs.yml  gitleaks.yml  release.yml
book/: book.toml
book/src/: SUMMARY.md  introduction.md
book/src/learning/: index.md
book/src/mcp/: setup.md
book/src/profile/: archaeology.md  index.md
book/src/reference/: cli.md  configuration.md  hooks.md
book/src/scrubber/: architecture.md  comments.md  index.md  lexical.md  recipes.md  security.md  structure.md
book/src/wringer/: drip_feed.md  index.md  public_branch.md
papertowel-mcp/: Cargo.toml  build.rs
papertowel-mcp/src/: main.rs
src/: lib.rs  main.rs
src/cli/: calibrate.rs  eval.rs  grade.rs  hook.rs  learn.rs  mod.rs  profile.rs  recipe.rs  report.rs  scan.rs  scrub.rs  wring.rs
src/config/: mod.rs
src/detection/: coraline.rs  finding.rs  grading.rs  language.rs  mod.rs  scoring.rs
src/domain/: commands.rs  errors.rs  mod.rs  queries.rs
src/learning/: baseline.rs  learner.rs  mod.rs
src/profile/: persona.rs
src/recipe/: loader.rs  matcher.rs  mod.rs  scrubber.rs  types.rs
src/recipes/: comment-patterns.toml  phrase-patterns.toml  slop-vocabulary.toml
src/scrubber/: architecture.rs  comments.rs  commit_pattern.rs  idiom_mismatch.rs  ignore_directives.rs  lexical.rs  maintenance.rs  metadata.rs  mod.rs  name_credibility.rs  promotion.rs  prompt.rs  readme.rs  security.rs  structure.rs  tests.rs  workflow.rs
src/wringer/: archaeology.rs  config.rs  drip.rs  lock.rs  messages.rs  mod.rs  queue.rs  worktree.rs
tests/: integration.rs
tests/fixtures/clean_repo/: .papertowelignore
tests/fixtures/clean_repo/src/: lib.rs
tests/fixtures/slop_repo/src/: lib.rs
tests/fixtures/template_repo/: .papertowelignore  README.md
