[package]
name = "papertowel"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "AI code fingerprint scrubber and git history humanizer"
repository = "https://github.com/greysquirr3l/papertowel"
keywords = ["git", "linter", "code-style", "ai", "cli"]
categories = ["command-line-utilities", "development-tools"]

[lib]
name = "papertowel"
path = "src/lib.rs"

[[bin]]
name = "papertowel"
path = "src/main.rs"

[dependencies]
aho-corasick = "1"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
clap = { version = "4", features = ["derive"] }
git2 = "0.20"
ignore = "0.4"
indicatif = "0.18"
rand = "0.8"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir = "2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[lints.clippy]
multiple-crate-versions = "allow"