[workspace]
members   = [".", "papertowel-mcp"]
resolver  = "2"

[workspace.lints.clippy]
# ── Groups (low priority so individual overrides win) ────────────────────────
all      = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery  = { level = "warn", priority = -1 }
cargo    = { level = "warn", priority = -1 }
perf     = { level = "warn", priority = -1 }

# ── Allowed (suppress noisy false-positives) ─────────────────────────────────
module_name_repetitions = "allow"
must_use_candidate      = "allow"
missing_errors_doc      = "allow"
missing_panics_doc      = "allow"
struct_excessive_bools  = "allow"
multiple_crate_versions = "allow"

# ── Denied (stricter than warn) ───────────────────────────────────────────────
unwrap_used        = "deny"
expect_used        = "deny"
panic              = "deny"
indexing_slicing   = "deny"
cast_ptr_alignment = "deny"
suspicious          = { level = "deny", priority = -1 }

[package]
name = "papertowel"
version = "0.3.1"
edition = "2024"
license = "MIT"
description = "AI code fingerprint scrubber and git history humanizer"
repository = "https://github.com/greysquirr3l/papertowel"
keywords = ["git", "linter", "code-style", "ai", "cli"]
categories = ["command-line-utilities", "development-tools"]
exclude = [
    "assets/",
    "book/",
    "docs/",
    "tasks/",
    ".github/",
    ".githooks/",
    ".gitleaks.toml",
    ".prettierignore",
]

[lib]
name = "papertowel"
path = "src/lib.rs"

[[bin]]
name = "papertowel"
path = "src/main.rs"

[dependencies]
aho-corasick = "1"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
clap = { version = "4", features = ["derive"] }
dirs = "6"
git2 = "0.20"
globset = "0.4"
fs2 = "0.4"
ignore = "0.4"
indicatif = "0.18"
rand = "0.9"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir = "2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[lints]
workspace = true
