[package]
name = "papertowel-mcp"
version = "0.3.3"
edition = "2024"
license = "MIT"
description = "MCP server exposing papertowel scan and scrub tools"
repository = "https://github.com/greysquirr3l/papertowel"
readme = "../README.md"
keywords = ["mcp", "ai", "linter", "code-style", "cli"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "papertowel-mcp"
path = "src/main.rs"

[dependencies]
papertowel = { path = "..", version = "0.3.3" }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir = "2"

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
